--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="b3L-mm-faj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="b3L-mm-faj">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
@@ -121,31 +121,31 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8XB-m5-DFp">
-                                <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XB-m5-DFp">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvG-4z-TZV">
-                                        <rect key="frame" x="-8" y="0.0" width="600" height="600"/>
+                                        <rect key="frame" x="-8" y="-64" width="600" height="600"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24y-Tb-Rwe">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24y-Tb-Rwe">
                                                 <rect key="frame" x="342" y="8" width="250" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-xd-zbV">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dof-xd-zbV">
                                                 <rect key="frame" x="19" y="84" width="330" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWv-HT-xfO">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sWv-HT-xfO">
                                                 <rect key="frame" x="19" y="46" width="584" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u1a-lL-WR9">
+                                            <webView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u1a-lL-WR9">
                                                 <rect key="frame" x="19" y="113" width="573" height="91"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
@@ -171,11 +171,12 @@
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="fvG-4z-TZV" firstAttribute="leading" secondItem="8XB-m5-DFp" secondAttribute="leading" constant="-8" id="1eO-n5-kw7"/>
-                                    <constraint firstItem="fvG-4z-TZV" firstAttribute="top" secondItem="8XB-m5-DFp" secondAttribute="top" id="9Tf-pV-eCW"/>
-                                    <constraint firstAttribute="bottom" secondItem="fvG-4z-TZV" secondAttribute="bottom" id="TfE-6P-V0i"/>
-                                    <constraint firstAttribute="width" secondItem="fvG-4z-TZV" secondAttribute="width" id="c8U-Qa-nr9"/>
-                                    <constraint firstAttribute="trailing" secondItem="fvG-4z-TZV" secondAttribute="trailing" constant="8" id="hnA-Ia-EhK"/>
+                                    <constraint firstAttribute="width" secondItem="fvG-4z-TZV" secondAttribute="width" id="DvU-oX-DeK"/>
+                                    <constraint firstItem="fvG-4z-TZV" firstAttribute="leading" secondItem="8XB-m5-DFp" secondAttribute="leading" id="HU3-87-Dxe"/>
+                                    <constraint firstItem="fvG-4z-TZV" firstAttribute="top" secondItem="8XB-m5-DFp" secondAttribute="top" id="X0x-LE-YDd"/>
+                                    <constraint firstAttribute="height" secondItem="fvG-4z-TZV" secondAttribute="height" id="fpr-gr-8Hi"/>
+                                    <constraint firstAttribute="trailing" secondItem="fvG-4z-TZV" secondAttribute="trailing" id="m5G-c3-iqG"/>
+                                    <constraint firstAttribute="bottom" secondItem="fvG-4z-TZV" secondAttribute="bottom" id="mgt-jf-JAx"/>
                                 </constraints>
                             </scrollView>
                             <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cPS-IS-TKD">
@@ -268,12 +269,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oH0-O3-a2W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2286" y="2030"/>
+            <point key="canvasLocation" x="2962" y="2030"/>
         </scene>
-        <!--View Controller-->
+        <!--Answers View Controller-->
         <scene sceneID="Ril-Kc-HAW">
             <objects>
-                <viewController id="8TF-aP-r7l" sceneMemberID="viewController">
+                <viewController id="8TF-aP-r7l" customClass="AnswersViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="or3-4b-f6C"/>
                         <viewControllerLayoutGuide type="bottom" id="4g9-Us-o0O"/>
@@ -281,12 +282,82 @@
                     <view key="view" contentMode="scaleToFill" id="zDd-kj-TbV">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="TLS-zL-hgS">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="hCU-yT-EaZ">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hCU-yT-EaZ" id="aEH-VF-ExA">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="8TF-aP-r7l" id="Nqt-vm-88w"/>
+                                    <outlet property="delegate" destination="8TF-aP-r7l" id="e3b-ld-gfa"/>
+                                </connections>
+                            </tableView>
+                            <view tag="2" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T0z-3g-isZ">
+                                <rect key="frame" x="0.0" y="278" width="600" height="44"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Iyz-1J-Xgt">
+                                        <rect key="frame" x="62" y="0.0" width="476" height="44"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yzR-9W-VAa">
+                                        <rect key="frame" x="546" y="6" width="46" height="30"/>
+                                        <state key="normal" title="Button">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pAX-8u-3oC">
+                                        <rect key="frame" x="8" y="6" width="46" height="30"/>
+                                        <state key="normal" title="Button">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="textOptions:" destination="8TF-aP-r7l" eventType="touchUpInside" id="ex5-eC-IGN"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="yzR-9W-VAa" firstAttribute="leading" secondItem="Iyz-1J-Xgt" secondAttribute="trailing" constant="8" id="1WP-px-bqD"/>
+                                    <constraint firstItem="yzR-9W-VAa" firstAttribute="top" secondItem="T0z-3g-isZ" secondAttribute="top" constant="6" id="4ny-eL-WDT"/>
+                                    <constraint firstItem="Iyz-1J-Xgt" firstAttribute="top" secondItem="T0z-3g-isZ" secondAttribute="top" id="Hcs-r2-yh9"/>
+                                    <constraint firstItem="pAX-8u-3oC" firstAttribute="leading" secondItem="T0z-3g-isZ" secondAttribute="leading" constant="8" id="KFM-b6-TuP"/>
+                                    <constraint firstItem="pAX-8u-3oC" firstAttribute="top" secondItem="T0z-3g-isZ" secondAttribute="top" constant="8" id="Mwp-U7-6dQ"/>
+                                    <constraint firstItem="Iyz-1J-Xgt" firstAttribute="leading" secondItem="pAX-8u-3oC" secondAttribute="trailing" constant="8" id="b1g-gz-p66"/>
+                                    <constraint firstAttribute="bottom" secondItem="Iyz-1J-Xgt" secondAttribute="bottom" id="d3h-J4-lT6"/>
+                                    <constraint firstAttribute="trailing" secondItem="yzR-9W-VAa" secondAttribute="trailing" constant="8" id="eC3-xL-SJh"/>
+                                    <constraint firstAttribute="bottom" secondItem="yzR-9W-VAa" secondAttribute="bottom" constant="8" id="qUQ-ZO-BUZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="pAX-8u-3oC" secondAttribute="bottom" constant="8" id="utj-ye-lZ8"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="T0z-3g-isZ" firstAttribute="leading" secondItem="zDd-kj-TbV" secondAttribute="leadingMargin" constant="-16" id="8gR-b8-rNn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="T0z-3g-isZ" secondAttribute="trailing" constant="-16" id="AGb-kt-yJb"/>
+                            <constraint firstItem="4g9-Us-o0O" firstAttribute="top" secondItem="T0z-3g-isZ" secondAttribute="bottom" id="jUW-ab-2WZ"/>
+                            <constraint firstItem="4g9-Us-o0O" firstAttribute="top" secondItem="TLS-zL-hgS" secondAttribute="bottom" constant="44" id="oZm-1y-xxk"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="actionView" destination="T0z-3g-isZ" id="F6d-up-wxW"/>
+                        <outlet property="tableView" destination="TLS-zL-hgS" id="Kgk-Kc-fws"/>
+                        <outlet property="tableViewBottom" destination="oZm-1y-xxk" id="C5k-ku-fIN"/>
+                        <outlet property="textViewBottom" destination="jUW-ab-2WZ" id="rK9-LV-eNS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sew-bl-tWO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1352" y="2030"/>
+            <point key="canvasLocation" x="892" y="2822"/>
         </scene>
         <!--Sidebar View Controller-->
         <scene sceneID="TC2-OV-4BK">
